fix spacing

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -28,14 +28,17 @@ nav span {
 .gallery-container {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 30px;
     align-items: center;
     padding: 40px 0px;
     min-width: fit-content;
 }
 
 .photo-block {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
 
 .photo-block img {
@@ -54,6 +57,7 @@ nav span {
 }
 
 .caption {
-    margin-top: 12px;
+    text-align: center;
     font-size: 1rem;
+    min-height: 1.5em;
 }
